A fix for modal-wrapper - z-index changed

--- a/src/AdminBundle/Resources/Public/less/modal.less
+++ b/src/AdminBundle/Resources/Public/less/modal.less
@@ -11,6 +11,7 @@
 .modal-wrapper {
   background: fade(@color-primary, 95%);
   padding: @navbar-height 0;
+  z-index: 1002;
 
   .button-close{
     position: absolute;
